--- a/content/project/woodTurtle/index.Rmd
+++ b/content/project/woodTurtle/index.Rmd
@@ -23,27 +23,28 @@ library(leafsync)
 library(viridis)
 ```
 
-<div class = "row">
-  
-<div class = "col-md-4">
-<br><br>![Wood Turtle](woodturtle1.jpg)
-</div>
-  
-<div class = "col-md-4">
-<br><br>![Baby Wood Turtles](babyWoodTurtles.jpg)
-</div>
-  
-<div class = "col-md-4">
-<br><br>![Wood Turtle](woodturtle2.jpg)
-</div>
-</div>
+<!-- <div class = "row"> -->
 
+<!-- <div class = "col-md-4"> -->
+<!-- <br><br>![Wood Turtle](woodturtle1.jpg) -->
+<!-- </div> -->
+
+<!-- <div class = "col-md-4"> -->
+<!-- <br><br>![Baby Wood Turtles](babyWoodTurtles.jpg) -->
+<!-- </div> -->
+
+<!-- <div class = "col-md-4"> -->
+<!-- <br><br>![Wood Turtle](woodturtle2.jpg) -->
+<!-- </div> -->
+<!-- </div> -->
+
+![wood turtle](woodturtle1.jpg){width=100%}\
 
 
 ## Summary:
 The use of ecological niche models to predict how future climate change may impact habitat suitability is a critical component of imperiled species management. These models allow for the identification of areas with high future suitability that will support the persistence of the species. We developed an ecological niche model and performed protected areas analysis to assess the current and future distribution of suitable habitat for the globally endangered wood turtle (*Glyptemys insculpta*) across the northeastern U.S. portion of its range. Our model predicts that by 2070 the suitable habitat for this species will decrease by 52%, and the total area of optimal habitat will decrease by 86%. Furthermore, currently only 5% of suitable habitat and 8% of optimal habitat is protected, with the total area of protected suitable and optimal habitat expected to decrease by 28% and 64%, respectively, by 2070. Our results suggest that long-term wood turtle conservation efforts should be directed towards protecting habitat in higher latitudes of their range, mainly in the states of Maine, Vermont, New Hampshire, and New York where the majority of climate refugia exist. Additionally, management action will be required to facilitate the northward transition of southern populations which are threatened with extinction due to rising temperatures. Along with having important conservation implications for the imperiled wood turtle, our study also serves as an example of how climate change assessments should be used to direct long-term conservation efforts of other imperiled species across the globe.
 
-**Below is a preview of our findings (manuscript currently under review, stay tuned!)**
+### **Below is a preview of our findings (manuscript currently under review, stay tuned!)**
 
 *** 
 
