--- a/content/project/woodTurtle/index.Rmd
+++ b/content/project/woodTurtle/index.Rmd
@@ -42,7 +42,7 @@ library(viridis)
 
 
 ## Summary:
-The use of ecological niche models to predict how future climate change may impact habitat suitability is a critical component of imperiled species management. These models allow for the identification of areas with high future suitability that will support the persistence of the species. We developed an ecological niche model and performed protected areas analysis to assess the current and future distribution of suitable habitat for the globally endangered wood turtle (*Glyptemys insculpta*) across the northeastern U.S. portion of its range. Our model predicts that by 2070 the suitable habitat for this species will decrease by 52%, and the total area of optimal habitat will decrease by 86%. Furthermore, currently only 5% of suitable habitat and 8% of optimal habitat is protected, with the total area of protected suitable and optimal habitat expected to decrease by 28% and 64%, respectively, by 2070. Our results suggest that long-term wood turtle conservation efforts should be directed towards protecting habitat in higher latitudes of their range, mainly in the states of Maine, Vermont, New Hampshire, and New York where the majority of climate refugia exist. Additionally, management action will be required to facilitate the northward transition of southern populations which are threatened with extinction due to rising temperatures. Along with having important conservation implications for the imperiled wood turtle, our study also serves as an example of how climate change assessments should be used to direct long-term conservation efforts of other imperiled species across the globe.
+The use of ecological niche models to predict how future climate change may impact habitat suitability is a critical component of imperiled species management. These models allow for the identification of areas with high future suitability that will support the persistence of the species. We developed an ecological niche model and performed protected areas analysis to assess the current and future distribution of suitable habitat for the globally endangered wood turtle (*Glyptemys insculpta*) across the northeastern U.S. portion of its range. **Our model predicts that by 2070 the suitable habitat for this species will decrease by 52%, and the total area of optimal habitat will decrease by 86%**. Furthermore, **currently only 5% of suitable habitat and 8% of optimal habitat is protected**, with the total area of protected suitable and optimal habitat expected to decrease by 28% and 64%, respectively, by 2070. Our results suggest that long-term wood turtle conservation efforts should be directed towards protecting habitat in higher latitudes of their range, mainly in the states of Maine, Vermont, New Hampshire, and New York where the majority of climate refugia exist. Additionally, management action will be required to facilitate the northward transition of southern populations which are threatened with extinction due to rising temperatures. Along with having important conservation implications for the imperiled wood turtle, our study also serves as an example of how climate change assessments should be used to direct long-term conservation efforts of other imperiled species across the globe.
 
 ### **Below is a preview of our findings (manuscript currently under review, stay tuned!)**
 
@@ -50,13 +50,10 @@ The use of ecological niche models to predict how future climate change may impa
 
 <br>
 
-### Current (left) and Future (right) Habitat Suitability for the Wood Turtle
-Dark colors indicate low suitability and bright colors indicate high suitability on a continuous scale of 0 - 1
-
-```{r echo = FALSE, warning = FALSE, message = FALSE}
-currSuit <- raster('data/analyses/current3km.tif')
-
-futureSuit <- raster('data/analyses/future3km.tif')
+### Current Habitat Suitability 
+(values range from **0 = Low Suitability** to **1 = High Suitability**)
+```{r out.width = "80%", echo = FALSE, message = FALSE}
+currSuit <- raster('data/analyses/current900.tif')
 
 x <- 0:1
 
@@ -64,8 +61,11 @@ pal <- leaflet::colorNumeric(palette = "inferno",
                              x,
                              na.color = "transparent")
 
-curr <- leaflet() %>% addTiles() %>%
-  addRasterImage(currSuit, colors = pal, maxBytes = 40 * 1024 * 1024) %>%
+currProj <- leaflet::projectRasterForLeaflet(currSuit, method = "bilinear")
+
+
+leaflet() %>% addTiles() %>%
+  addRasterImage(currProj, colors = pal, maxBytes = Inf, project = FALSE) %>%
   addLegend(
     position = 'bottomright',
     pal = pal,
@@ -74,8 +74,27 @@ curr <- leaflet() %>% addTiles() %>%
     title = 'Current Habitat Suitability'
   )
 
-future <- leaflet() %>% addTiles() %>%
-  addRasterImage(futureSuit, colors = pal, maxBytes = 40 * 1024 * 1024) %>%
+```
+
+
+
+<br>
+
+### Future (2070) Habitat Suitability
+```{r out.width="80%", echo=FALSE, message=FALSE}
+futureSuit <- raster('data/analyses/future900.tif')
+
+x <- 0:1
+
+pal <- leaflet::colorNumeric(palette = "inferno",
+                             x,
+                             na.color = "transparent")
+
+futProj <- leaflet::projectRasterForLeaflet(futureSuit, method = "bilinear")
+
+
+leaflet() %>% addTiles() %>%
+  addRasterImage(futProj, colors = pal, maxBytes = Inf, project = FALSE) %>%
   addLegend(
     position = 'bottomright',
     pal = pal,
@@ -84,24 +103,28 @@ future <- leaflet() %>% addTiles() %>%
     title = 'Future Habitat Suitability'
   )
 
-leafsync::sync(curr, future, ncol = 2)
+
+
 ```
-*Scroll on one of the maps to zoom in and out of both*
+
 
 <br> 
 
 ### Change in suitability
 Visualize how habitat suitablity changes from current to future climatic conditions. Throughout the entire range we find decreasing suitability values (red and orange colors), with hardly any areas increasing in suitability (noted by the lack of green colors)
 
-```{r echo=FALSE, warning=FALSE, message=FALSE}
-changeSuit <- raster('data/analyses/change3km.tif')
+```{r out.width = "80%", echo=FALSE, warning=FALSE, message=FALSE}
+changeSuit <- raster('data/analyses/change900.tif')
 
 x2 <- -1:1
 
 pal2 <- leaflet::colorNumeric(palette = 'RdYlGn', x2, na.color = 'transparent')
 
+changeProj <- leaflet::projectRasterForLeaflet(changeSuit, method = "bilinear")
+
+
 leaflet() %>% addTiles() %>% 
-  addRasterImage(changeSuit, colors = pal2, maxBytes = 40 * 1024 * 1024) %>%
+  addRasterImage(changeProj, colors = pal2, maxBytes = Inf) %>%
   addLegend(
     position = 'bottomright',
     pal = pal2,
