--- a/content/project/stateListedSpecies/index.Rmd
+++ b/content/project/stateListedSpecies/index.Rmd
@@ -1,5 +1,5 @@
 ---
-date: "2020-03-25T00:00:00Z"
+date: "2020-09-16T00:00:00Z"
 external_link: ""
 image:
   caption:
@@ -29,10 +29,13 @@ output:
     theme: tactile
     highlight: github
 ---
+#### **This study was recently published in *Conservation Letters*, which you can read [here](Mothes_etal_2020_ConservationLetters.pdf). Below see interactive maps of our findings.**
+
 
 ```{r setup, include=FALSE}
 library(knitr)
 library(tidyverse)
+library(stringr)
 library(leaflet)
 library(tmap)
 library(geojsonio)
@@ -44,22 +47,23 @@ library(viridis)
 knitr::opts_chunk$set(echo = TRUE)
 
 #load data
-iucnSp <- read_csv('data/iucnFINAL.csv')
+iucnSp <- read_csv('data/iucnFINAL_revisions.csv')
 fedSp <- read_csv('data/fedFINAL.csv')
 stateImp <- read_csv('data/stateFINAL.csv')
 
 data("fifty_states")
 
 # make summary files
-stateAllSp <- stateImp %>% add_row(state = c('west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>% 
-  group_by(state) %>% count() %>% select(state, totalProtectedSpecies = n) %>% ungroup() %>% 
-  mutate(totalProtectedSpecies = if_else(totalProtectedSpecies == 1, NA_integer_,totalProtectedSpecies))
+stateAllSp <- stateImp %>% add_row(state = c('west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>%
+  mutate(state = str_to_title(state)) %>% 
+  group_by(state) %>% count() %>% rename(totalProtectedSpecies = n) %>% ungroup() %>% 
+  mutate(totalProtectedSpecies = if_else(totalProtectedSpecies == 1, NA_integer_, totalProtectedSpecies))
 
-fedAllSp <- fedSp %>% 
-  group_by(state) %>% count() %>% select(state, totalESASpecies = n)
+fedAllSp <- fedSp %>% mutate(state = str_to_title(state)) %>% 
+  group_by(state) %>% count() %>% rename(totalListedSpecies = n)
 
-iucnAllSp <- iucnSp %>% 
-  group_by(state) %>% count() %>% select(state, totalImperiledSpecies = n)
+iucnAllSp <- iucnSp %>% mutate(state = str_to_title(state)) %>% 
+  group_by(state) %>% count() %>% rename(totalListedSpecies = n)
 
 #make leaflet edits
 css_fix <- "div.info.legend.leaflet-control br {clear: both;}" # CSS to correct spacing
@@ -67,10 +71,8 @@ html_fix <- htmltools::tags$style(type = "text/css", css_fix)  # Convert CSS to 
 
 
 ```
-## Summary: 
-Legal protection of imperiled species is essential to combat growing rates of global extinctions. In the United States, the federal government employs the Endangered Species Act (ESA) to protect threatened and endangered species. While the ESA is arguably one of the strongest environmental laws ever enacted, there are current political initiatives to weaken the ESA and even dismantle it entirely to transfer all authority to the states. To assess the legal capacity of current state laws to protect species, we analyzed the coverage of imperiled species by each state. We compiled data on all state listed species, IUCN Red List species, and ESA listed species in each state. We found that 68% of IUCN imperiled species and 30% of ESA listed species are not protected throughout their entire U.S. range by state laws. Additionally, 94% of states protect less than half of the IUCN imperiled species that occur in their state, and one third of states protect less than half of the ESA listed species in their state. Although there are large discrepancies between state legislative provisions, our results suggest that phasing out the ESA would be detrimental to imperiled species conservation and recovery in the U.S. 
-
-### **Below is a preview of our findings (manuscript currently under review, stay tuned!)**
+## Abstract: 
+To combat biodiversity loss in the United States, imperiled species are protectedunder the federal Endangered Species Act (ESA), which is currently threatenedby political initiatives seeking to weaken it and potentially transfer substantialauthority to the states. To assess the conservation capacity of current state laws,we conducted a quantitative analysis of imperiled species protection within all states by compiling data on all state-listed species, ESA-listed species, and IUCNRed List species in each state. We found that currently 16% of ESA-listed speciesand 52% of IUCN imperiled species are not protected by any state law, and if theESA were repealed these numbers could increase to 73% of ESA-listed species and 81% of IUCN imperiled species unprotected. Although protection varies widelyamong states, our results suggest that revoking the ESA would be highly detri-mental to imperiled species conservation and recovery in the United States
 
 <br>
 
@@ -87,9 +89,9 @@ sf_fifty <- sf::st_as_sf(fifty_states, coords = c("long", "lat")) %>%
   st_cast("POLYGON") %>% 
   ungroup() %>% 
   rename(state = id) %>% 
+  mutate(state = str_to_title(state)) %>% 
   filter(state %in% stateAllSp$state) %>% 
-  left_join(stateAllSp, by ='state') %>% 
-  mutate(state = str_to_title(state))
+  left_join(stateAllSp, by ='state')
 
 
 pal <- colorNumeric("Blues", domain = sf_fifty$totalProtectedSpecies)
@@ -144,24 +146,24 @@ Now let's split this into **animal** and **plant** species protected in each sta
 ```{r echo = FALSE, warning=FALSE, message=FALSE}
 
 stateWildlife <- stateImp %>% filter(taxon_general != 'Plants') %>%
-  add_row(state = c('west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>% 
+  add_row(state = c('west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>%
+  mutate(state = str_to_title(state)) %>% 
   group_by(state) %>% count() %>% select(totalWildlife = n) %>% ungroup() %>% 
   mutate(totalWildlife = if_else(totalWildlife == 1, NA_integer_,totalWildlife))
 
 
-sf_fifty <- sf_fifty %>%
-  mutate(state = tolower(state)) %>% 
+sf_fiftyW <- sf_fifty %>%
   left_join(stateWildlife, by ='state')
 
 
-pal <- colorNumeric("YlOrBr", domain = sf_fifty$totalWildlife)
+pal <- colorNumeric("YlOrBr", domain = sf_fiftyW$totalWildlife)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Total State Listed  Animal Species</sup>",
-  sf_fifty$state, sf_fifty$totalWildlife
+  sf_fiftyW$state, sf_fiftyW$totalWildlife
 ) %>% lapply(htmltools::HTML)
 
-leaflet(sf_fifty) %>%
+leaflet(sf_fiftyW) %>%
   addPolygons(
     fillColor = ~ pal(totalWildlife),
     weight = 2,
@@ -208,25 +210,26 @@ stateNoPlant <- stateImp %>% filter(!(state %in% stateWithPlants)) %>% pull(stat
 
 statePlants <- stateImp %>% 
   filter(taxon_general == 'Plants') %>%
-  add_row(state = c(stateNoPlant,'west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>% 
+  add_row(state = c(stateNoPlant,'west virginia', 'wyoming', 'utah', 'north dakota', 'alabama')) %>%
+  mutate(state = str_to_title(state)) %>% 
   group_by(state) %>%
   count() %>% ungroup() %>% 
   select(state, totalPlants = n) %>% 
   mutate(totalPlants = if_else(totalPlants == 1, NA_integer_,totalPlants))
 
 
-sf_fifty <- sf_fifty %>%
+sf_fiftyP <- sf_fifty %>%
   left_join(statePlants, by ='state')
 
 
-pal <- colorNumeric("YlGn", domain = sf_fifty$totalPlants)
+pal <- colorNumeric("YlGn", domain = sf_fiftyP$totalPlants)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Total State Listed Plant Species</sup>",
-  sf_fifty$state, sf_fifty$totalPlants
+  sf_fiftyP$state, sf_fiftyP$totalPlants
 ) %>% lapply(htmltools::HTML)
 
-leaflet(sf_fifty) %>%
+leaflet(sf_fiftyP) %>%
   addPolygons(
     fillColor = ~ pal(totalPlants),
     weight = 2,
@@ -264,29 +267,29 @@ leaflet(sf_fifty) %>%
 
 <br>
 
-After we collected data on all the protected species in each state, we also collected data on all of the IUCN imperiled species (i.e. categorized as Critically Endangered, Endangered, or Vulnerable) and all of the federally listed species (protected by the Endangered Species Act) that occur in each state
+After we collected data on all the protected species in each state, we also collected data on all of the IUCN imperiled species (i.e., species categorized as Critically Endangered, Endangered, or Vulnerable) and all of the federally listed species (protected by the Endangered Species Act) that occur in each state
 <br>
 
 ### Total IUCN imperiled species in each state
 
-Here I've split the map into quantiles instead of using a continuous scale for better visualization due to outliers (i.e. Hawaii). You can hover over the state to see the extact number of IUCN imperiled species
+Here I've split the map into quantiles instead of using a continuous scale for better visualization due to outliers (i.e., Hawaii). You can hover over the state to see the extact number of IUCN imperiled species
 ```{r echo = FALSE, message = FALSE, warning=FALSE}
 
 
-sf_fifty <- sf_fifty %>%
+sf_fiftyIUCN <- sf_fifty %>%
   left_join(iucnAllSp, by ='state')
 
 
-pal <- colorQuantile('Blues', domain = sf_fifty$totalImperiledSpecies, n = 6)
+pal <- colorQuantile('Blues', domain = sf_fiftyIUCN$totalListedSpecies, n = 6)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Total IUCN Imperiled Species</sup>",
-  sf_fifty$state, sf_fifty$totalImperiledSpecies
+  sf_fiftyIUCN$state, sf_fiftyIUCN$totalListedSpecies
 ) %>% lapply(htmltools::HTML)
 
-leaflet(sf_fifty) %>%
+leaflet(sf_fiftyIUCN) %>%
   addPolygons(
-    fillColor = ~ pal(totalImperiledSpecies),
+    fillColor = ~ pal(totalListedSpecies),
     weight = 2,
     opacity = 1,
     color = "white",
@@ -309,7 +312,7 @@ leaflet(sf_fifty) %>%
   ) %>%
   addLegend(
     pal = pal,
-    values = ~ totalImperiledSpecies,
+    values = ~ totalListedSpecies,
     na.label = 'None',
     opacity = 0.7,
     title = 'Total IUCN Imperiled Species',
@@ -330,16 +333,16 @@ sf_fifty <- sf_fifty %>%
   left_join(fedAllSp, by ='state')
 
 
-pal <- colorQuantile('Blues', domain = sf_fifty$totalESASpecies, n = 6)
+pal <- colorQuantile('Blues', domain = sf_fifty$totalListedSpecies, n = 6)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Total ESA Species</sup>",
-  sf_fifty$state, sf_fifty$totalESASpecies
+  sf_fifty$state, sf_fifty$totalListedSpecies
 ) %>% lapply(htmltools::HTML)
 
 leaflet(sf_fifty) %>%
   addPolygons(
-    fillColor = ~ pal(totalESASpecies),
+    fillColor = ~ pal(totalListedSpecies),
     weight = 2,
     opacity = 1,
     color = "white",
@@ -362,7 +365,7 @@ leaflet(sf_fifty) %>%
   ) %>%
   addLegend(
     pal = pal,
-    values = ~ totalESASpecies,
+    values = ~ totalListedSpecies,
     na.label = 'None',
     opacity = 0.7,
     title = 'Total ESA Species',
@@ -384,27 +387,30 @@ iucnStateListed <- map_dfr(unique(iucnSp$state),
                     filter(state == x) %>%
                     filter(acceptedName %in% st$acceptedName)
                 }) %>% 
+  mutate(state = str_to_title(state)) %>% 
   group_by(state) %>% 
   count() %>% 
   rename(iucnStateListed = n) 
 
-iucnStateListedSummary <-  iucnSp %>% group_by(state) %>% count() %>% rename(totalImperiled = n) %>% 
+iucnStateListedSummary <-  iucnSp %>%
+  mutate(state = str_to_title(state)) %>% 
+  group_by(state) %>% count() %>% rename(totalImperiled = n) %>% 
   left_join(iucnStateListed, by = 'state') %>% mutate(proportionListed = iucnStateListed/totalImperiled,
                                                       percentImperiledProtected = proportionListed*100)%>% 
    mutate(percentImperiledProtected = if_else(percentImperiledProtected == 0, NA_integer_, as.integer(percentImperiledProtected)))
 
-sf_fifty <- sf_fifty %>%
+sf_fiftyIUCN2 <- sf_fifty %>%
   left_join(iucnStateListedSummary, by ='state')
 
 
-pal <- colorNumeric('Reds', domain = sf_fifty$percentImperiledProtected)
+pal <- colorNumeric('Reds', domain = sf_fiftyIUCN2$percentImperiledProtected)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Percent Imperiled Species Protected </sup>",
-  sf_fifty$state, sf_fifty$percentImperiledProtected
+  sf_fiftyIUCN2$state, sf_fiftyIUCN2$percentImperiledProtected
 ) %>% lapply(htmltools::HTML)
 
-leaflet(sf_fifty) %>%
+leaflet(sf_fiftyIUCN2) %>%
   addPolygons(
     fillColor = ~ pal(percentImperiledProtected),
     weight = 2,
@@ -452,29 +458,32 @@ FedStateListed <- map_dfr(unique(fedSp$state),
                                filter(state == x)
                              fedSp %>%
                                filter(state == x & acceptedName %in% st$acceptedName)
-                           }) %>% 
+                           }) %>%
+  mutate(state = str_to_title(state)) %>% 
   group_by(state) %>% 
   count() %>% 
   rename(fedStateListed = n) 
 
-FedStateListedSummary <-  fedSp %>% group_by(state) %>% count() %>% rename(totalFedListed = n) %>% 
+FedStateListedSummary <-  fedSp %>% 
+  mutate(state = str_to_title(state)) %>% 
+  group_by(state) %>% count() %>% rename(totalFedListed = n) %>% 
   left_join(FedStateListed, by = 'state') %>% mutate(proportionESAListed = fedStateListed/totalFedListed,
                                            percentESAProtected = proportionESAListed*100) %>% 
   mutate(percentESAProtected = if_else(percentESAProtected == 0, NA_integer_, as.integer(percentESAProtected)))
 
 
-sf_fifty <- sf_fifty %>%
+sf_fiftyESA2 <- sf_fifty %>%
   left_join(FedStateListedSummary, by ='state')
 
 
-pal <- colorNumeric('Reds', domain = sf_fifty$percentESAProtected)
+pal <- colorNumeric('Reds', domain = sf_fiftyESA2$percentESAProtected)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g Percent ESA Listed Species Protected </sup>",
-  sf_fifty$state, sf_fifty$percentESAProtected
+  sf_fiftyESA2$state, sf_fiftyESA2$percentESAProtected
 ) %>% lapply(htmltools::HTML)
 
-leaflet(sf_fifty) %>%
+leaflet(sf_fiftyESA2) %>%
   addPolygons(
     fillColor = ~ pal(percentESAProtected),
     weight = 2,
